# pico-projects

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  addProgram.cmake  readme.md  setup.sh
blink/: CMakeLists.txt  readme.md
blink/pico/: CMakeLists.txt  readme.md
blink/pico/src/: main.cpp
blink/pico_w/: CMakeLists.txt  readme.md
blink/pico_w/src/: main.cpp
blink/src/: main.cpp
multicore/: CMakeLists.txt
multicore/blocking-fifo-example/: CMakeLists.txt  readme.md
multicore/blocking-fifo-example/src/: main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
utility/: CMakeLists.txt  readme.md
utility/i2cBusScan/: CMakeLists.txt  readme.md
utility/i2cBusScan/src/: main.cpp
